--- a/Prover.Client/Prover.Client.vbproj
+++ b/Prover.Client/Prover.Client.vbproj
@@ -287,6 +287,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Prover.Certificates.Data\Prover.Certificates.Data.vbproj">
+      <Project>{7a6ddf54-f090-4fe3-8cb2-16775946a40e}</Project>
+      <Name>Prover.Certificates.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Prover.Certificates.View\Prover.Certificates.View.vbproj">
       <Project>{d4decd1b-b023-4bbb-a3db-d98aa708c625}</Project>
       <Name>Prover.Certificates.View</Name>
