--- a/Prover.Certificates.Data/Prover.Certificates.Data.vbproj
+++ b/Prover.Certificates.Data/Prover.Certificates.Data.vbproj
@@ -132,6 +132,8 @@
     <Compile Include="Provider\CertificateDataProvider.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Certificate.rdlc" />
+    <EmbeddedResource Include="Certificate2.rdlc" />
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -144,6 +146,7 @@
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+    <None Include="My Project\DataSources\ICertificate.datasource" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <CustomToolNamespace>My</CustomToolNamespace>
