--- a/Prover/Prover.vbproj
+++ b/Prover/Prover.vbproj
@@ -133,6 +133,8 @@
     <Compile Include="IProverSubModule.vb" />
     <Compile Include="IView.vb" />
     <Compile Include="MediatorHelper.vb" />
+    <Compile Include="Prism\Events\INotification.vb" />
+    <Compile Include="Prism\Events\ProverNotification.vb" />
     <Compile Include="Prism\IProverModule.vb" />
     <Compile Include="Prism\ProverModule.vb" />
     <Compile Include="ProverManager.vb" />
