--- a/Prover.Instruments.Search/App.config
+++ b/Prover.Instruments.Search/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Prover.Instruments.View.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -15,4 +20,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Prover.Instruments.View.MySettings>
+      <setting name="CommPort" serializeAs="String">
+        <value>COM11</value>
+      </setting>
+      <setting name="BaudRate" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="TachCommPort" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="InstrumentType" serializeAs="String">
+        <value>MiniMax</value>
+      </setting>
+    </Prover.Instruments.View.MySettings>
+  </userSettings>
 </configuration>
