--- a/Prover.Instruments.Data.Tests/Prover.Instruments.Data.Tests.vbproj
+++ b/Prover.Instruments.Data.Tests/Prover.Instruments.Data.Tests.vbproj
@@ -128,6 +128,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Tachometer.vb" />
     <Compile Include="USBDABoard.vb" />
   </ItemGroup>
   <ItemGroup>
