--- a/Prover.Instruments.Data/NLog.config
+++ b/Prover.Instruments.Data/NLog.config
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-  <!-- 
-  See http://nlog-project.org/wiki/Configuration_file 
-  for information on customizing logging rules and outputs.
-   -->
-  <targets>
-    <!-- add your targets here -->
-    
-    <!--
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
-  </targets>
+	<!-- 
+	See http://nlog-project.org/wiki/Configuration_file 
+	for information on customizing logging rules and outputs.
+	 -->
+	-->
+	<variable name="logFilePath" value="${basedir}/logs/${shortdate}.log" />
+	<targets>
+		<target name="logfile" xsi:type="File" fileName="${logFilePath}"/>
+		<target name="console" xsi:type="Console" />
+	</targets>
 
-  <rules>
-    <!-- add your logging rules here -->
-    
-    <!--
-    <logger name="*" minlevel="Trace" writeTo="f" />
-    -->
-  </rules>
+	<rules>
+		<logger name="*" minlevel="Info" writeTo="logfile" />
+		<logger name="*" minlevel="Trace" writeTo="console" />
+	</rules>
 </nlog>
